Added Andela logo and built the main body of the page and styled it

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
     </div>
     <main>
         <div class="container">
-            <div>
-                <img src="" alt="Andela Logo">
+            <div class="text-center">
+                <img src="Andela.png" alt="Andela Logo">
+                <form>
+                    <div>
+                        <input type="text" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Google Search</button>
+                </form>
             </div>
         </div>
     </main>
