Added search button functionality

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <img src="Andela.png" alt="Andela Logo">
                 <form>
                     <div>
-                        <input type="text" required>
+                        <input type="text" id="searchText" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Google Search</button>
+                    <button type="submit" id="search" class="btn btn-primary">Google Search</button>
                 </form>
             </div>
         </div>
@@ -52,6 +52,7 @@
         </div>
 
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
